force-app/main/default/objects/TCP_KeyValueSettings__c/TCP_KeyValueSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The custom setting to be used anywhere across the system where a key value kind of info needs to be stored and retrieved.</description>
    <label>TCP Key Value Settings</label>
</CustomObject>