force-app/main/default/objects/TCP_KeyValueSettings__c/fields/TCP_DocID__c.field-meta.xml
<CustomField>
    <fullName>TCP_DocID__c</fullName>
    <label>TCP_DocID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>