force-app/main/default/objects/TCP_KeyValueSettings__c/fields/TCP_ServiceName__c.field-meta.xml
<CustomField>
    <fullName>TCP_ServiceName__c</fullName>
    <label>TCP_ServiceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>