force-app/main/default/objects/TCP_KeyValueSettings__c/fields/TCP_Value__c.field-meta.xml
<CustomField>
    <fullName>TCP_Value__c</fullName>
    <label>TCP_Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>